unpackaged/main/default/objects/Targeting_Template_Type__mdt/Targeting_Template_Type__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Targeting Template Editor</description>
    <label>Targeting Template Type</label>
    <pluralLabel>Targeting Template Types</pluralLabel>
</CustomObject>