unpackaged/main/default/objects/Targeting_Template_Type__mdt/fields/Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server__c</fullName>
    <label>Ad Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>