unpackaged/main/default/objects/Targeting_Template_Type__mdt/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <defaultValue>&quot;Independent&quot;</defaultValue>
    <description>Indicates Template Type dependency of Market</description>
    <inlineHelpText>Indicates Template Type dependency of Market</inlineHelpText>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
                <default>true</default>
                <label>Independent</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>