unpackaged/main/default/objects/Targeting_Template_Type__mdt/fields/Profile_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Profile_Restriction__c</fullName>
    <description>Comma separated list of profiles which have access to targeting template type. If empty, all profiles have access</description>
    <inlineHelpText>Comma separated list of profiles which have access to targeting template type. If empty, all profiles have access</inlineHelpText>
    <label>Profile Restriction</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>