unpackaged/main/default/objects/Targeting_Template_Type__mdt/fields/Targeting_Sections__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Sections__c</fullName>
    <description>Comma separated list of sections to display in Targeting Widget for certain Targeting Template Type</description>
    <inlineHelpText>Comma separated list of sections to display in Targeting Widget for certain Targeting Template Type</inlineHelpText>
    <label>Targeting Sections</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>