unpackaged/main/default/objects/Targeting_Template_Type__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Slot Targeting</fullName>
                <default>true</default>
                <label>Ad Slot Targeting</label>
            </value>
            <value>
                <fullName>Holistic Targeting</fullName>
            </value>
            <value>
                <fullName>Market Targeting</fullName>
            </value>
            <value>
                <fullName>Preset Targeting</fullName>
            </value>
            <value>
                <fullName>Podcast Bundle</fullName>
            </value>
            <value>
                <fullName>Podcast Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>